examples/test/testpolicy14464.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14464
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key2: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value33
          key20: value40
          key5: value18
      podSelector:
        matchLabels:
          key18: value39
